# Algorithms

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
DataStructures/: AVL_tree.cpp  BST.cpp  doubly-linked_list.cpp  linked_list.cpp
DataStructures/BST/: BST.cpp  BST.py
DataStructures/DoublyLinkedList/: CMakeLists.txt  doubly_linked_list.hpp  test.cpp
DataStructures/ForwardList/: CMakeLists.txt  forward_list.cpp  forward_list.hpp  forward_list.py  test.cpp
DataStructures/Graphs/Connected components/: connected_components.cpp
DataStructures/Graphs/Depth-first search/: DFS.cpp
DataStructures/Graphs/Graph storage/Adjacency list/: adjacency_list.cpp
DataStructures/Graphs/Graph storage/Adjacency matrix/: adjacency_matrix.cpp
DataStructures/Graphs/Graph storage/Edge list/: edge_list.cpp
DataStructures/Stack/: CMakeLists.txt  stack.c  stack.hpp  stack_realloc.c  test.cpp
DataStructures/StackWithContainer/: CMakeLists.txt  stack_with_container.cpp  stack_with_container.hpp  test.cpp
